--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>알루미늄 압출형재 전무 삼원금속(주) 방문을 환영합니다.</h1>
+<p>TEL : 031-498-6232</p>
+<p>FAX : 031-498-9927</p>
 </body>
 </html>
