--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>알루미늄 압출형재 전문 삼원금속(주) 방문을 환영합니다.</h1>
+<h1>알루미늄 압출형재 전문</h1>
+<h1>삼원금속(주) 방문을 환영합니다</h1>
 <p>TEL : 031-498-6232</p>
 <p>FAX : 031-498-9927</p>
 <p>경기도 시흥시 공단1대로 367</p>
