--- a/index.html
+++ b/index.html
@@ -9,8 +9,22 @@
 <p>FAX : 031-498-9927</p>
 <p>경기도 시흥시 공단1대로 367</p>
 <!-- * 카카오맵 - 지도퍼가기 -->
+<!--
+	2. 설치 스크립트
+	* 지도 퍼가기 서비스를 2개 이상 넣을 경우, 설치 스크립트는 하나만 삽입합니다.
+-->
+<script charset="UTF-8" class="daum_roughmap_loader_script" src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
 <!-- 1. 지도 노드 -->
 <div id="daumRoughmapContainer1582158205545" class="root_daum_roughmap root_daum_roughmap_landing"></div>
+<!-- 3. 실행 스크립트 -->
+<script charset="UTF-8">
+	new daum.roughmap.Lander({
+		"timestamp" : "1582158205545",
+		"key" : "x5vg",
+		"mapWidth" : "640",
+		"mapHeight" : "360"
+	}).render();
+</script>
 <p></p>
 <p><지사></p>
 <p>TEL : 02-2266-4205</p>
@@ -18,18 +32,11 @@
 <p>서울시 중구 을지로 165-1</p>
 <!-- 1. 지도 노드 -->
 <div id="daumRoughmapContainer1582161241474" class="root_daum_roughmap root_daum_roughmap_landing"></div>
-
-<!--
-	2. 설치 스크립트
-	* 지도 퍼가기 서비스를 2개 이상 넣을 경우, 설치 스크립트는 하나만 삽입합니다.
--->
-<script charset="UTF-8" class="daum_roughmap_loader_script" src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
-
 <!-- 3. 실행 스크립트 -->
 <script charset="UTF-8">
 	new daum.roughmap.Lander({
-		"timestamp" : "1582158205545",
-		"key" : "x5vg",
+		"timestamp" : "1582161241474",
+		"key" : "x5xf",
 		"mapWidth" : "640",
 		"mapHeight" : "360"
 	}).render();
