--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <body>
 <h1>알루미늄 압출형재 전문</h1>
 <h1>삼원금속(주) 방문을 환영합니다</h1>
-<p> </p>
+<p></p>
+<p></p>
 <p><본사></p>
 <p>TEL : 031-498-6232</p>
 <p>FAX : 031-498-9927</p>
@@ -25,8 +26,9 @@
 		"mapHeight" : "360"
 	}).render();
 </script>
-<p> </p>
-<p><지사></p>
+<p></p>
+<p></p>
+<p><지사(대리점)></p>
 <p>TEL : 02-2266-4205</p>
 <p>FAX : 02-2277-1837</p>
 <p>서울시 중구 을지로 165-1</p>
