--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <body>
 <h1>알루미늄 압출형재 전문</h1>
 <h1>삼원금속(주) 방문을 환영합니다</h1>
+<a href="./img/al_list.pdf">일반 형재 목록(원파이프,각파이프,앵글,평철,환봉)</a>
+<p>고유 형재 개발은 본사나 지사로 문의 바랍니다.</p>
+<br/>
 <p><본사></p>
 <p>TEL : 031-498-6232</p>
 <p>FAX : 031-498-9927</p>
@@ -40,6 +43,5 @@
 		"mapHeight" : "360"
 	}).render();
 </script>
-<a href="./img/al_list.pdf">일반 형재 (원파이프,각파이프,앵글,평철,환봉)</a>
 </body>
 </html>
