--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <a href="./img/al_list.pdf">일반 형재 목록(원파이프,각파이프,앵글,평철,환봉)</a>
 <p>고유 형재 개발은 본사나 지사로 문의 바랍니다.</p>
 <br/>
-<p><본사></p>
+<p><strong><본사></strong></p>
 <p>TEL : 031-498-6232</p>
 <p>FAX : 031-498-9927</p>
 <p>경기도 시흥시 공단1대로 367</p>
@@ -28,7 +28,7 @@
 	}).render();
 </script>
 <br/>
-<p><지사(대리점)></p>
+<p><strong><지사(대리점)></strong></p>
 <p>TEL : 02-2266-4205</p>
 <p>FAX : 02-2277-1837</p>
 <p>서울시 중구 을지로 165-1</p>
